# 2022_21Sample

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: camera.launch  cashier_system.launch  likes_and_dislikes.launch
scripts/: cashier.py  likes_and_dislikes.py
