<?xml version="1.0"?>
<package format="2">
  <name>ai_integration_01</name>
  <version>0.1.0</version>
  <description>The ai_integration_01 package</description>
  
  <maintainer email="haa-c001@athuman.com">athuman</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <export>
  </export>
</package>
